--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Andrew DaRe",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mysql2": "^1.5.3",
+    "sequelize": "^4.37.10"
   }
 }
