--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Andrew DaRe",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.10"
