--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Andrew DaRe",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
